   - Only Java and JavaScript are now supported UDF languages.
     The sandbox in 3.0 already prevented the use of script languages except Java
     and JavaScript.
   - Compaction now correctly drops sstables out of CompactionTask when there
     isn't enough disk space to perform the full compaction.  This should reduce
     pending compaction tasks on systems with little remaining disk space.

3.0.10
=====

Upgrading
---------
   - memtable_allocation_type: offheap_buffers is no longer allowed to be specified in the 3.0 series.
     This was an oversight that can cause segfaults. Offheap was re-introduced in 3.4 see CASSANDRA-11039
     and CASSANDRA-9472 for details.

3.0.9
=====

Upgrading
---------
   - The ReversedType behaviour has been corrected for clustering columns of
     BYTES type containing empty value. Scrub should be run on the existing
     SSTables containing a descending clustering column of BYTES type to correct
     their ordering. See CASSANDRA-12127 for more details.

3.0.8
=====

Upgrading
---------
   - Ec2MultiRegionSnitch will no longer automatically set broadcast_rpc_address
     to the public instance IP if this property is defined on cassandra.yaml.

3.0.7
=====

Upgrading
---------
   - A maximum size for SSTables values has been introduced, to prevent out of memory
     exceptions when reading corrupt SSTables. This maximum size can be set via
     max_value_size_in_mb in cassandra.yaml. The default is 256MB, which matches the default
     value of native_transport_max_frame_size_in_mb. SSTables will be considered corrupt if
     they contain values whose size exceeds this limit. See CASSANDRA-9530 for more details.

Deprecation
-----------
   - DateTieredCompactionStrategy has been deprecated - new tables should use
     TimeWindowCompactionStrategy. Note that migrating an existing DTCS-table to TWCS might
     cause increased compaction load for a while after the migration so make sure you run